hu.bme.mit.theta.formalism.cfa/src/gen/java/hu/bme/mit/theta/formalism/cfa/dsl/gen/CfaDslParser.java
// Generated from CfaDsl.g4 by ANTLR 4.5.3
package hu.bme.mit.theta.formalism.cfa.dsl.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CfaDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VAR=1, MAIN=2, PROCESS=3, INIT=4, FINAL=5, ERROR=6, LOC=7, BOOLTYPE=8, 
		INTTYPE=9, RATTYPE=10, IF=11, THEN=12, ELSE=13, IFF=14, IMPLY=15, FORALL=16, 
		EXISTS=17, OR=18, AND=19, NOT=20, EQ=21, NEQ=22, LT=23, LEQ=24, GT=25, 
		GEQ=26, PLUS=27, MINUS=28, MUL=29, DIV=30, MOD=31, REM=32, PERCENT=33, 
		PRIME=34, TRUE=35, FALSE=36, ASSIGN=37, HAVOC=38, ASSUME=39, RETURN=40, 
		INT=41, NAT=42, SIGN=43, DOT=44, ID=45, UNDERSCORE=46, DIGIT=47, LETTER=48, 
		LPAREN=49, RPAREN=50, LBRACK=51, RBRACK=52, LBRAC=53, RBRAC=54, COMMA=55, 
		COLON=56, SEMICOLON=57, QUOT=58, LARROW=59, RARROW=60, WS=61, COMMENT=62, 
		LINE_COMMENT=63;
	public static final int
		RULE_spec = 0, RULE_varDecl = 1, RULE_procDecl = 2, RULE_loc = 3, RULE_edge = 4, 
		RULE_decl = 5, RULE_declList = 6, RULE_type = 7, RULE_typeList = 8, RULE_boolType = 9, 
		RULE_intType = 10, RULE_ratType = 11, RULE_funcType = 12, RULE_arrayType = 13, 
		RULE_expr = 14, RULE_exprList = 15, RULE_funcLitExpr = 16, RULE_iteExpr = 17, 
		RULE_iffExpr = 18, RULE_implyExpr = 19, RULE_quantifiedExpr = 20, RULE_forallExpr = 21, 
		RULE_existsExpr = 22, RULE_orExpr = 23, RULE_andExpr = 24, RULE_notExpr = 25, 
		RULE_equalityExpr = 26, RULE_relationExpr = 27, RULE_additiveExpr = 28, 
		RULE_multiplicativeExpr = 29, RULE_negExpr = 30, RULE_accessorExpr = 31, 
		RULE_access = 32, RULE_funcAccess = 33, RULE_arrayAccess = 34, RULE_primeAccess = 35, 
		RULE_primaryExpr = 36, RULE_trueExpr = 37, RULE_falseExpr = 38, RULE_intLitExpr = 39, 
		RULE_ratLitExpr = 40, RULE_idExpr = 41, RULE_parenExpr = 42, RULE_stmt = 43, 
		RULE_stmtList = 44, RULE_assignStmt = 45, RULE_havocStmt = 46, RULE_assumeStmt = 47, 
		RULE_returnStmt = 48;
	public static final String[] ruleNames = {
		"spec", "varDecl", "procDecl", "loc", "edge", "decl", "declList", "type", 
		"typeList", "boolType", "intType", "ratType", "funcType", "arrayType", 
		"expr", "exprList", "funcLitExpr", "iteExpr", "iffExpr", "implyExpr", 
		"quantifiedExpr", "forallExpr", "existsExpr", "orExpr", "andExpr", "notExpr", 
		"equalityExpr", "relationExpr", "additiveExpr", "multiplicativeExpr", 
		"negExpr", "accessorExpr", "access", "funcAccess", "arrayAccess", "primeAccess", 
		"primaryExpr", "trueExpr", "falseExpr", "intLitExpr", "ratLitExpr", "idExpr", 
		"parenExpr", "stmt", "stmtList", "assignStmt", "havocStmt", "assumeStmt", 
		"returnStmt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'var'", "'main'", "'process'", "'init'", "'final'", "'error'", 
		"'loc'", "'bool'", "'int'", "'rat'", "'if'", "'then'", "'else'", "'iff'", 
		"'imply'", "'forall'", "'exists'", "'or'", "'and'", "'not'", "'='", "'/='", 
		"'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'mod'", "'rem'", 
		"'%'", null, "'true'", "'false'", "':='", "'havoc'", "'assume'", "'return'", 
		null, null, null, "'.'", null, "'_'", null, null, "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "','", "':'", "';'", null, "'<-'", "'->'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "VAR", "MAIN", "PROCESS", "INIT", "FINAL", "ERROR", "LOC", "BOOLTYPE", 
		"INTTYPE", "RATTYPE", "IF", "THEN", "ELSE", "IFF", "IMPLY", "FORALL", 
		"EXISTS", "OR", "AND", "NOT", "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "PLUS", 
		"MINUS", "MUL", "DIV", "MOD", "REM", "PERCENT", "PRIME", "TRUE", "FALSE", 
		"ASSIGN", "HAVOC", "ASSUME", "RETURN", "INT", "NAT", "SIGN", "DOT", "ID", 
		"UNDERSCORE", "DIGIT", "LETTER", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"LBRAC", "RBRAC", "COMMA", "COLON", "SEMICOLON", "QUOT", "LARROW", "RARROW", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CfaDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CfaDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpecContext extends ParserRuleContext {
		public VarDeclContext varDecl;
		public List<VarDeclContext> varDecls = new ArrayList<VarDeclContext>();
		public ProcDeclContext procDecl;
		public List<ProcDeclContext> procDecls = new ArrayList<ProcDeclContext>();
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<ProcDeclContext> procDecl() {
			return getRuleContexts(ProcDeclContext.class);
		}
		public ProcDeclContext procDecl(int i) {
			return getRuleContext(ProcDeclContext.class,i);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << MAIN) | (1L << PROCESS))) != 0)) {
				{
				setState(100);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(98);
					((SpecContext)_localctx).varDecl = varDecl();
					((SpecContext)_localctx).varDecls.add(((SpecContext)_localctx).varDecl);
					}
					break;
				case MAIN:
				case PROCESS:
					{
					setState(99);
					((SpecContext)_localctx).procDecl = procDecl();
					((SpecContext)_localctx).procDecls.add(((SpecContext)_localctx).procDecl);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public DeclContext ddecl;
		public TerminalNode VAR() { return getToken(CfaDslParser.VAR, 0); }
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(VAR);
			setState(106);
			((VarDeclContext)_localctx).ddecl = decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcDeclContext extends ParserRuleContext {
		public Token main;
		public Token id;
		public DeclListContext paramDecls;
		public VarDeclContext varDecl;
		public List<VarDeclContext> varDecls = new ArrayList<VarDeclContext>();
		public LocContext loc;
		public List<LocContext> locs = new ArrayList<LocContext>();
		public EdgeContext edge;
		public List<EdgeContext> edges = new ArrayList<EdgeContext>();
		public TerminalNode PROCESS() { return getToken(CfaDslParser.PROCESS, 0); }
		public TerminalNode LBRAC() { return getToken(CfaDslParser.LBRAC, 0); }
		public TerminalNode RBRAC() { return getToken(CfaDslParser.RBRAC, 0); }
		public TerminalNode ID() { return getToken(CfaDslParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(CfaDslParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CfaDslParser.RPAREN, 0); }
		public TerminalNode MAIN() { return getToken(CfaDslParser.MAIN, 0); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<LocContext> loc() {
			return getRuleContexts(LocContext.class);
		}
		public LocContext loc(int i) {
			return getRuleContext(LocContext.class,i);
		}
		public List<EdgeContext> edge() {
			return getRuleContexts(EdgeContext.class);
		}
		public EdgeContext edge(int i) {
			return getRuleContext(EdgeContext.class,i);
		}
		public DeclListContext declList() {
			return getRuleContext(DeclListContext.class,0);
		}
		public ProcDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterProcDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitProcDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitProcDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcDeclContext procDecl() throws RecognitionException {
		ProcDeclContext _localctx = new ProcDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if (_la==MAIN) {
				{
				setState(108);
				((ProcDeclContext)_localctx).main = match(MAIN);
				}
			}

			setState(111);
			match(PROCESS);
			setState(112);
			((ProcDeclContext)_localctx).id = match(ID);
			setState(118);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(113);
				match(LPAREN);
				setState(115);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(114);
					((ProcDeclContext)_localctx).paramDecls = declList();
					}
				}

				setState(117);
				match(RPAREN);
				}
			}

			setState(120);
			match(LBRAC);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << INIT) | (1L << FINAL) | (1L << ERROR) | (1L << LOC) | (1L << ID))) != 0)) {
				{
				setState(124);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(121);
					((ProcDeclContext)_localctx).varDecl = varDecl();
					((ProcDeclContext)_localctx).varDecls.add(((ProcDeclContext)_localctx).varDecl);
					}
					break;
				case INIT:
				case FINAL:
				case ERROR:
				case LOC:
					{
					setState(122);
					((ProcDeclContext)_localctx).loc = loc();
					((ProcDeclContext)_localctx).locs.add(((ProcDeclContext)_localctx).loc);
					}
					break;
				case ID:
					{
					setState(123);
					((ProcDeclContext)_localctx).edge = edge();
					((ProcDeclContext)_localctx).edges.add(((ProcDeclContext)_localctx).edge);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocContext extends ParserRuleContext {
		public Token init;
		public Token finall;
		public Token error;
		public Token id;
		public TerminalNode LOC() { return getToken(CfaDslParser.LOC, 0); }
		public TerminalNode ID() { return getToken(CfaDslParser.ID, 0); }
		public TerminalNode INIT() { return getToken(CfaDslParser.INIT, 0); }
		public TerminalNode FINAL() { return getToken(CfaDslParser.FINAL, 0); }
		public TerminalNode ERROR() { return getToken(CfaDslParser.ERROR, 0); }
		public LocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterLoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitLoc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitLoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocContext loc() throws RecognitionException {
		LocContext _localctx = new LocContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_loc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			switch (_input.LA(1)) {
			case INIT:
				{
				setState(131);
				((LocContext)_localctx).init = match(INIT);
				}
				break;
			case FINAL:
				{
				setState(132);
				((LocContext)_localctx).finall = match(FINAL);
				}
				break;
			case ERROR:
				{
				setState(133);
				((LocContext)_localctx).error = match(ERROR);
				}
				break;
			case LOC:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(136);
			match(LOC);
			setState(137);
			((LocContext)_localctx).id = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public Token source;
		public Token target;
		public StmtContext stmt;
		public List<StmtContext> stmts = new ArrayList<StmtContext>();
		public TerminalNode RARROW() { return getToken(CfaDslParser.RARROW, 0); }
		public List<TerminalNode> ID() { return getTokens(CfaDslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CfaDslParser.ID, i);
		}
		public TerminalNode LBRAC() { return getToken(CfaDslParser.LBRAC, 0); }
		public TerminalNode RBRAC() { return getToken(CfaDslParser.RBRAC, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitEdge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitEdge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_edge);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			((EdgeContext)_localctx).source = match(ID);
			setState(140);
			match(RARROW);
			setState(141);
			((EdgeContext)_localctx).target = match(ID);
			setState(150);
			_la = _input.LA(1);
			if (_la==LBRAC) {
				{
				setState(142);
				match(LBRAC);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HAVOC) | (1L << ASSUME) | (1L << RETURN) | (1L << ID))) != 0)) {
					{
					{
					setState(143);
					((EdgeContext)_localctx).stmt = stmt();
					((EdgeContext)_localctx).stmts.add(((EdgeContext)_localctx).stmt);
					}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(149);
				match(RBRAC);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Token name;
		public TypeContext ttype;
		public TerminalNode COLON() { return getToken(CfaDslParser.COLON, 0); }
		public TerminalNode ID() { return getToken(CfaDslParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			((DeclContext)_localctx).name = match(ID);
			setState(153);
			match(COLON);
			setState(154);
			((DeclContext)_localctx).ttype = type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclListContext extends ParserRuleContext {
		public DeclContext decl;
		public List<DeclContext> decls = new ArrayList<DeclContext>();
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CfaDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CfaDslParser.COMMA, i);
		}
		public DeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitDeclList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CfaDslVisitor ) return ((CfaDslVisitor<? extends T>)visitor).visitDeclList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclListContext declList() throws RecognitionException {
		DeclListContext _localctx = new DeclListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(156);
			((DeclListContext)_localctx).decl = decl();
			((DeclListContext)_localctx).decls.add(((DeclListContext)_localctx).decl);
			}
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(157);
				match(COMMA);
				setState(158);
				((DeclListContext)_localctx).decl = decl();
				((DeclListContext)_localctx).decls.add(((DeclListContext)_localctx).decl);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public BoolTypeContext boolType() {
			return getRuleContext(BoolTypeContext.class,0);
		}
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public RatTypeContext ratType() {
			return getRuleContext(RatTypeContext.class,0);
		}
		public FuncTypeContext funcType() {
			return getRuleContext(FuncTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CfaDslListener ) ((CfaDslListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
